# local-wispr-flow

./: README.md  asr.py  asr_gemma.py  commands.py  config.py  dictation.py  editor.py  llm.py  prompts.py  pyproject.toml  recorder.py  ui.py
