[project]
name = "voice-dictation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx-whisper>=0.4.3",
    "numpy>=2.4.6",
    "pynput>=1.8.2",
    "pyperclip>=1.11.0",
    "requests>=2.34.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
]
